// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Validaciones para el componente <GifExpertApp /> Debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One Punch"
      key="One Punch"
    />
    <GifGrid
      category="Shakira"
      key="Shakira"
    />
  </ol>
</Fragment>
`;

exports[`Validaciones para el componente <GifExpertApp /> Prueba que el componente <GifExpertApp/> carga bien con el snapshot 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
